--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,5 +4,5 @@ commit = False
 tag = False
 
 [bumpversion:file:README.md]
-search = version =={current_version}
-replace = version =={new_version}
+search = __version__=={current_version}
+replace = __version__=={new_version}
